fix: change gradients to blurred backgrounds with SVG overlay in `PlayerMini` for better performance

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -17,7 +17,7 @@
 .tile.on .tile-clipper {
   background-color: var(--surface-bright);
 }
-.tile.simple.on .tile-clipper {
+.tile.simple.on .tile-clipper, .tile.mini.on {
   background-color: var(--primary);
 }
 
